--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.0",
     "image-webpack-loader": "^6.0.0",
